update vscode extension

--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -30,6 +30,7 @@
   "icon": "assets/logo.png",
   "activationEvents": [
     "workspaceContains:**/mason.yaml",
+    "workspaceContains:**/brick.yaml",
     "onCommand:mason.init",
     "onCommand:mason.add-local-brick",
     "onCommand:mason.add-global-brick",
@@ -39,7 +40,16 @@
     "onCommand:mason.remove-global-brick"
   ],
   "main": "./dist/extension.js",
+  "extensionDependencies": [
+    "redhat.vscode-yaml"
+  ],
   "contributes": {
+    "yamlValidation": [
+      {
+        "fileMatch": "brick.yaml",
+        "url": "./schema/brick.yaml.schema.json"
+      }
+    ],
     "commands": [
       {
         "command": "mason.init",
@@ -100,7 +110,7 @@
     "@types/lodash": "^4.14.187",
     "@types/mocha": "^10.0.0",
     "@types/node": "14.x",
-    "@types/vscode": "^1.72.0",
+    "@types/vscode": "^1.66.0",
     "@types/yaml": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
