feat(vscode): mason.yaml schema

--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -48,6 +48,10 @@
       {
         "fileMatch": "brick.yaml",
         "url": "./schema/brick.yaml.schema.json"
+      },
+      {
+        "fileMatch": "mason.yaml",
+        "url": "./schema/mason.yaml.schema.json"
       }
     ],
     "commands": [
