--- a/.github/workflows/mason_cli.yaml
+++ b/.github/workflows/mason_cli.yaml
@@ -17,9 +17,9 @@ on:
     paths:
       - .github/workflows/mason_cli.yaml
       - packages/mason_logger/**
-      - packages/mason_api/**
-      - packages/mason/**
-      - packages/mason_cli/**
+      # - packages/mason_api/**
+      # - packages/mason/**
+      # - packages/mason_cli/**
 
 jobs:
   setup:
