--- a/.github/workflows/mason_logger.yaml
+++ b/.github/workflows/mason_logger.yaml
@@ -1,78 +1,78 @@
-# name: mason_logger
+name: mason_logger
 
-# on:
-#   push:
-#     branches:
-#       - master
-#     paths:
-#       - .github/workflows/mason_logger.yaml
-#       - packages/mason_logger/**
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - .github/workflows/mason_logger.yaml
+      - packages/mason_logger/**
 
-#   pull_request:
-#     branches:
-#       - master
-#     paths:
-#       - .github/workflows/mason_logger.yaml
-#       - packages/mason_logger/**
+  pull_request:
+    branches:
+      - master
+    paths:
+      - .github/workflows/mason_logger.yaml
+      - packages/mason_logger/**
 
-# jobs:
-#   build:
-#     defaults:
-#       run:
-#         working-directory: packages/mason_logger
+jobs:
+  build:
+    defaults:
+      run:
+        working-directory: packages/mason_logger
 
-#     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - uses: actions/checkout@v3.1.0
-#       - uses: dart-lang/setup-dart@v1
+    steps:
+      - uses: actions/checkout@v3.1.0
+      - uses: dart-lang/setup-dart@v1
 
-#       - name: Install Dependencies
-#         run: dart pub get
+      - name: Install Dependencies
+        run: dart pub get
 
-#       - name: Format
-#         run: dart format --set-exit-if-changed lib
+      - name: Format
+        run: dart format --set-exit-if-changed lib
 
-#       - name: Analyze
-#         run: dart analyze --fatal-infos --fatal-warnings .
+      - name: Analyze
+        run: dart analyze --fatal-infos --fatal-warnings .
 
-#       - name: Verify CI Behavior
-#         run: |
-#           dart test/ci.dart >> ci.txt
-#           actual="ci.txt"
-#           expected="test/fixtures/ci.txt"
-#           if cmp -s "$actual" "$expected"; then
-#               echo "PASSED"
-#           else
-#               echo "FAILED"
-#               exit 1
-#           fi
+      - name: Verify CI Behavior
+        run: |
+          dart test/ci.dart >> ci.txt
+          actual="ci.txt"
+          expected="test/fixtures/ci.txt"
+          if cmp -s "$actual" "$expected"; then
+              echo "PASSED"
+          else
+              echo "FAILED"
+              exit 1
+          fi
 
-#       - name: Run Tests
-#         run: |
-#           dart pub global activate coverage 1.2.0
-#           dart test --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
+      - name: Run Tests
+        run: |
+          dart pub global activate coverage 1.2.0
+          dart test --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
-#       - name: Check Code Coverage
-#         uses: VeryGoodOpenSource/very_good_coverage@v2
-#         with:
-#           path: packages/mason_logger/coverage/lcov.info
+      - name: Check Code Coverage
+        uses: VeryGoodOpenSource/very_good_coverage@v2
+        with:
+          path: packages/mason_logger/coverage/lcov.info
 
-#   pana:
-#     defaults:
-#       run:
-#         working-directory: packages/mason_logger
+  pana:
+    defaults:
+      run:
+        working-directory: packages/mason_logger
 
-#     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - uses: actions/checkout@v3.1.0
-#       - uses: dart-lang/setup-dart@v1
+    steps:
+      - uses: actions/checkout@v3.1.0
+      - uses: dart-lang/setup-dart@v1
 
-#       - name: Install Dependencies
-#         run: |
-#           dart pub get
-#           dart pub global activate pana
+      - name: Install Dependencies
+        run: |
+          dart pub get
+          dart pub global activate pana
 
-#       - name: Verify Pub Score
-#         run: ../../tool/verify_pub_score.sh
+      - name: Verify Pub Score
+        run: ../../tool/verify_pub_score.sh
