--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -1,68 +1,68 @@
-# name: mason
+name: mason
 
-# on:
-#   push:
-#     branches:
-#       - master
-#     paths:
-#       - .github/workflows/mason.yaml
-#       - packages/mason_logger/**
-#       - packages/mason/**
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - .github/workflows/mason.yaml
+      - packages/mason_logger/**
+      - packages/mason/**
 
-#   pull_request:
-#     branches:
-#       - master
-#     paths:
-#       - .github/workflows/mason.yaml
-#       - packages/mason_logger/**
-#       - packages/mason/**
+  pull_request:
+    branches:
+      - master
+    paths:
+      - .github/workflows/mason.yaml
+      - packages/mason_logger/**
+      - packages/mason/**
 
-# jobs:
-#   build:
-#     defaults:
-#       run:
-#         working-directory: packages/mason
+jobs:
+  build:
+    defaults:
+      run:
+        working-directory: packages/mason
 
-#     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - uses: actions/checkout@v3.1.0
-#       - uses: dart-lang/setup-dart@v1
+    steps:
+      - uses: actions/checkout@v3.1.0
+      - uses: dart-lang/setup-dart@v1
 
-#       - name: Install Dependencies
-#         run: dart pub get
+      - name: Install Dependencies
+        run: dart pub get
 
-#       - name: Format
-#         run: dart format --set-exit-if-changed lib
+      - name: Format
+        run: dart format --set-exit-if-changed lib
 
-#       - name: Analyze
-#         run: dart analyze --fatal-infos --fatal-warnings .
+      - name: Analyze
+        run: dart analyze --fatal-infos --fatal-warnings .
 
-#       - name: Run Tests
-#         run: |
-#           dart pub global activate coverage 1.2.0
-#           dart test -j 1 -x pull-request-only --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
+      - name: Run Tests
+        run: |
+          dart pub global activate coverage 1.2.0
+          dart test -j 1 -x pull-request-only --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
-#       - name: Check Code Coverage
-#         uses: VeryGoodOpenSource/very_good_coverage@v2
-#         with:
-#           path: packages/mason/coverage/lcov.info
+      - name: Check Code Coverage
+        uses: VeryGoodOpenSource/very_good_coverage@v2
+        with:
+          path: packages/mason/coverage/lcov.info
 
-#   pana:
-#     defaults:
-#       run:
-#         working-directory: packages/mason
+  pana:
+    defaults:
+      run:
+        working-directory: packages/mason
 
-#     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - uses: actions/checkout@v3.1.0
-#       - uses: dart-lang/setup-dart@v1
+    steps:
+      - uses: actions/checkout@v3.1.0
+      - uses: dart-lang/setup-dart@v1
 
-#       - name: Install Dependencies
-#         run: |
-#           dart pub get
-#           dart pub global activate pana
+      - name: Install Dependencies
+        run: |
+          dart pub get
+          dart pub global activate pana
 
-#       - name: Verify Pub Score
-#         run: ../../tool/verify_pub_score.sh
+      - name: Verify Pub Score
+        run: ../../tool/verify_pub_score.sh
