--- a/.github/workflows/mason_cli.yaml
+++ b/.github/workflows/mason_cli.yaml
@@ -1,96 +1,96 @@
-# name: mason_cli
+name: mason_cli
 
-# on:
-#   push:
-#     branches:
-#       - master
-#     paths:
-#       - .github/workflows/mason_cli.yaml
-#       - packages/mason_logger/**
-#       - packages/mason_api/**
-#       - packages/mason/**
-#       - packages/mason_cli/**
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - .github/workflows/mason_cli.yaml
+      - packages/mason_logger/**
+      - packages/mason_api/**
+      - packages/mason/**
+      - packages/mason_cli/**
 
-#   pull_request:
-#     branches:
-#       - master
-#     paths:
-#       - .github/workflows/mason_cli.yaml
-#       - packages/mason_logger/**
-#       - packages/mason_api/**
-#       - packages/mason/**
-#       - packages/mason_cli/**
+  pull_request:
+    branches:
+      - master
+    paths:
+      - .github/workflows/mason_cli.yaml
+      - packages/mason_logger/**
+      - packages/mason_api/**
+      - packages/mason/**
+      - packages/mason_cli/**
 
-# jobs:
-#   setup:
-#     defaults:
-#       run:
-#         working-directory: packages/mason_cli
+jobs:
+  setup:
+    defaults:
+      run:
+        working-directory: packages/mason_cli
 
-#     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - uses: actions/checkout@v3.1.0
-#       - uses: dart-lang/setup-dart@v1
+    steps:
+      - uses: actions/checkout@v3.1.0
+      - uses: dart-lang/setup-dart@v1
 
-#       - name: Install Dependencies
-#         run: dart pub get
+      - name: Install Dependencies
+        run: dart pub get
 
-#       - name: Format
-#         run: dart format --set-exit-if-changed lib
+      - name: Format
+        run: dart format --set-exit-if-changed lib
 
-#       - name: Analyze
-#         run: dart analyze --fatal-infos --fatal-warnings .
+      - name: Analyze
+        run: dart analyze --fatal-infos --fatal-warnings .
 
-#       - name: Ensure Build
-#         run: dart test --run-skipped -t pull-request-only
+      - name: Ensure Build
+        run: dart test --run-skipped -t pull-request-only
 
-#   build:
-#     needs: setup
+  build:
+    needs: setup
 
-#     defaults:
-#       run:
-#         working-directory: packages/mason_cli
+    defaults:
+      run:
+        working-directory: packages/mason_cli
 
-#     runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         os: [macos-latest, windows-2019, ubuntu-latest]
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, windows-2019, ubuntu-latest]
 
-#     steps:
-#       - uses: actions/checkout@v3.1.0
-#       - uses: dart-lang/setup-dart@v1
+    steps:
+      - uses: actions/checkout@v3.1.0
+      - uses: dart-lang/setup-dart@v1
 
-#       - name: Install Dependencies
-#         run: dart pub get
+      - name: Install Dependencies
+        run: dart pub get
 
-#       - name: Run Tests
-#         run: |
-#           dart pub global activate coverage 1.2.0
-#           dart test -j 1 -x pull-request-only --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
+      - name: Run Tests
+        run: |
+          dart pub global activate coverage 1.2.0
+          dart test -j 1 -x pull-request-only --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
-#       - name: Check Code Coverage
-#         uses: VeryGoodOpenSource/very_good_coverage@v2
-#         with:
-#           path: packages/mason_cli/coverage/lcov.info
+      - name: Check Code Coverage
+        uses: VeryGoodOpenSource/very_good_coverage@v2
+        with:
+          path: packages/mason_cli/coverage/lcov.info
 
-#   pana:
-#     defaults:
-#       run:
-#         working-directory: packages/mason_cli
+  pana:
+    defaults:
+      run:
+        working-directory: packages/mason_cli
 
-#     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - uses: actions/checkout@v3.1.0
-#       - uses: dart-lang/setup-dart@v1
+    steps:
+      - uses: actions/checkout@v3.1.0
+      - uses: dart-lang/setup-dart@v1
 
-#       - name: Install Dependencies
-#         run: |
-#           dart pub get
-#           dart pub global activate pana
+      - name: Install Dependencies
+        run: |
+          dart pub get
+          dart pub global activate pana
 
-#       - name: Verify Pub Score
-#         run: ../../tool/verify_pub_score.sh
+      - name: Verify Pub Score
+        run: ../../tool/verify_pub_score.sh
