--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   archive: ^3.1.11
   checked_yaml: ^2.0.1
   collection: ^1.15.0
+  convert: ^3.1.0
   crypto: ^3.0.1
   http: ^0.13.3
   json_annotation: ^4.4.0
