--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -13,6 +13,7 @@ environment:
 dependencies:
   args: ^2.1.0
   checked_yaml: ^2.0.1
+  cli_completion: ^0.1.0
   mason: ^0.1.0-dev.39
   mason_api: ^0.1.0-dev.8
   meta: ^1.7.0
