--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -18,7 +18,32 @@ on:
       - packages/mason/**
 
 jobs:
+  setup:
+    defaults:
+      run:
+        working-directory: packages/mason
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: dart-lang/setup-dart@v1
+
+      - name: Install Dependencies
+        run: dart pub get
+
+      - name: Format
+        run: dart format --set-exit-if-changed lib
+
+      - name: Analyze
+        run: dart analyze --fatal-infos --fatal-warnings .
+
+      - name: Ensure Build
+        run: dart test --run-skipped -t pull-request-only
+
   build:
+    needs: setup
+
     defaults:
       run:
         working-directory: packages/mason
@@ -36,12 +61,6 @@ jobs:
 
       - name: Install Dependencies
         run: dart pub get
-
-      - name: Format
-        run: dart format --set-exit-if-changed lib
-
-      - name: Analyze
-        run: dart analyze --fatal-infos --fatal-warnings .
 
       - name: Run Tests
         run: |
