ci(mason): run on macos, windows, and linux (#693)

--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -18,7 +18,7 @@ on:
       - packages/mason/**
 
 jobs:
-  build:
+  setup:
     defaults:
       run:
         working-directory: packages/mason
@@ -36,7 +36,28 @@ jobs:
         run: dart format --set-exit-if-changed lib
 
       - name: Analyze
-        run: dart analyze --fatal-infos --fatal-warnings .
+        run: dart analyze --fatal-infos --fatal-warnings .      
+
+  build:
+    needs: setup
+
+    defaults:
+      run:
+        working-directory: packages/mason
+
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, windows-2019, ubuntu-latest]
+
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: dart-lang/setup-dart@v1
+
+      - name: Install Dependencies
+        run: dart pub get
 
       - name: Run Tests
         run: |
