--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -5,7 +5,7 @@ version: 0.1.0-dev.43
 homepage: https://github.com/felangel/mason
 repository: https://github.com/felangel/mason
 issue_tracker: https://github.com/felangel/mason/issues
-documentation: https://github.com/felangel/mason/tree/master/packages/mason_cli#readme
+documentation: https://docs.brickhub.dev
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
