--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -2,7 +2,7 @@
   "name": "mason",
   "displayName": "mason",
   "description": "Mason support for Visual Studio Code.",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "publisher": "FelixAngelov",
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
   },
   "homepage": "https://brickhub.dev",
   "engines": {
-    "vscode": "^1.66.0"
+    "vscode": "^1.75.0"
   },
   "categories": [
     "Other"
@@ -30,14 +30,7 @@
   "icon": "assets/logo.png",
   "activationEvents": [
     "workspaceContains:**/mason.yaml",
-    "workspaceContains:**/brick.yaml",
-    "onCommand:mason.init",
-    "onCommand:mason.add-local-brick",
-    "onCommand:mason.add-global-brick",
-    "onCommand:mason.make-local-brick",
-    "onCommand:mason.make-global-brick",
-    "onCommand:mason.remove-local-brick",
-    "onCommand:mason.remove-global-brick"
+    "workspaceContains:**/brick.yaml"
   ],
   "main": "./dist/extension.js",
   "extensionDependencies": [
@@ -114,7 +107,7 @@
     "@types/lodash": "^4.14.191",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
-    "@types/vscode": "^1.66.0",
+    "@types/vscode": "^1.75.0",
     "@types/yaml": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
