--- a/packages/mason_cli/test/fixtures/new/simple/hello_world/brick.yaml
+++ b/packages/mason_cli/test/fixtures/new/simple/hello_world/brick.yaml
@@ -1,6 +1,10 @@
 name: hello_world
 description: A new brick created with the Mason CLI.
 
+# The following defines the brick repository url.
+# Uncomment and update the following line before publishing the brick.
+# repository: https://github.com/my_org/my_repo
+
 # The following defines the version and build number for your brick.
 # A version number is three numbers separated by dots, like 1.2.34
 # followed by an optional build number (separated by a +).
