--- a/packages/mason_api/pubspec.yaml
+++ b/packages/mason_api/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
   sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
-  cli_util: ">=0.3.5 <0.5.0"
+  cli_util: ^0.4.0
   http: ^0.13.4
   json_annotation: ^4.4.0
   meta: ^1.7.0
