--- a/packages/mason_api/pubspec.yaml
+++ b/packages/mason_api/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 
 dependencies:
   cli_util: ^0.4.0
-  http: ^0.13.4
+  http: '>=0.13.3 <2.0.0'
   json_annotation: ^4.4.0
   meta: ^1.7.0
   path: ^1.8.1
