feat: add type `list` to vars in `brick.yaml`

--- a/packages/mason_cli/example/mason.yaml
+++ b/packages/mason_cli/example/mason.yaml
@@ -13,6 +13,8 @@ bricks:
     path: ../../../bricks/hooks
   legacy:
     path: ../../../bricks/legacy
+  favorite_languages:
+    path: ../../../bricks/favorite_languages
   plugin:
     path: ../../../bricks/plugin
   random_color:
