--- a/packages/mason_cli/test/fixtures/new/simple/hello_world/brick.yaml
+++ b/packages/mason_cli/test/fixtures/new/simple/hello_world/brick.yaml
@@ -18,12 +18,13 @@ environment:
 # Variables specify dynamic values that your brick depends on.
 # Zero or more variables can be specified for a given brick.
 # Each variable has:
-#  * a type (string, number, boolean, enum, or array)
+#  * a type (string, number, boolean, enum, array, or list)
 #  * an optional short description
 #  * an optional default value
 #  * an optional list of default values (array only)
 #  * an optional prompt phrase used when asking for the variable
 #  * a list of values (enums only)
+#  * an optional separator (list only)
 vars:
   name:
     type: string
