--- a/.github/workflows/mason_cli.yaml
+++ b/.github/workflows/mason_cli.yaml
@@ -97,4 +97,4 @@ jobs:
           dart pub global activate pana
 
       - name: Verify Pub Score
-        run: ../../tool/verify_pub_score.sh
+        run: ../../tool/verify_pub_score.sh 0
