--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -122,7 +122,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.44.0",
     "glob": "^10.3.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.0.0",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack": "^5.88.1",
