--- a/packages/mason_logger/pubspec.yaml
+++ b/packages/mason_logger/pubspec.yaml
@@ -10,6 +10,10 @@ topics: [cli, logger, mason]
 environment:
   sdk: ">=2.19.0 <4.0.0"
 
+dependencies:
+  ffi: ^2.1.0
+  win32: ^5.0.7
+
 dev_dependencies:
   meta: ^1.7.0
   mocktail: ^1.0.0
