--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -13,7 +13,7 @@ environment:
 dependencies:
   args: ^2.1.0
   checked_yaml: ^2.0.1
-  cli_completion: ">=0.3.0 <0.5.0"
+  cli_completion: ^0.4.0
   mason: ^0.1.0-dev.50
   mason_api: ^0.1.0-dev.10
   meta: ^1.7.0
