--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -6,6 +6,7 @@ homepage: https://github.com/felangel/mason
 repository: https://github.com/felangel/mason
 issue_tracker: https://github.com/felangel/mason/issues
 documentation: https://docs.brickhub.dev
+topics: [mason, cli, template, generator]
 
 environment:
   sdk: ">=2.19.0 <4.0.0"
@@ -14,11 +15,11 @@ dependencies:
   args: ^2.1.0
   checked_yaml: ^2.0.1
   cli_completion: ^0.4.0
-  mason: ^0.1.0-dev.50
+  mason: ^0.1.0-dev.51
   mason_api: ^0.1.0-dev.10
   meta: ^1.7.0
   path: ^1.8.0
-  pub_updater: ^0.3.0
+  pub_updater: ">=0.3.0 <0.5.0"
 
 dev_dependencies:
   build_runner: ^2.0.0
