--- a/packages/mason_api/pubspec.yaml
+++ b/packages/mason_api/pubspec.yaml
@@ -1,10 +1,11 @@
 name: mason_api
 description: A Dart API client used by the Mason CLI (package:mason_cli).
-version: 0.1.0-dev.10
+version: 0.1.0-dev.11
 homepage: https://github.com/felangel/mason
 repository: https://github.com/felangel/mason
 issue_tracker: https://github.com/felangel/mason/issues
 documentation: https://github.com/felangel/mason/tree/master/packages/mason_cli#readme
+topics: [mason, template, generator]
 
 environment:
   sdk: ">=2.19.0 <4.0.0"
