--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   collection: ^1.15.0
   convert: ^3.1.0
   crypto: ^3.0.1
+  glob: ^2.1.2
   http: '>=0.13.3 <2.0.0'
   json_annotation: ^4.8.1
   mason_logger: ^0.2.11
