ci(mason): increase test timeout

--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -40,7 +40,7 @@ jobs:
         run: dart format --set-exit-if-changed lib
 
       - name: Analyze
-        run: dart analyze --fatal-infos --fatal-warnings .      
+        run: dart analyze --fatal-infos --fatal-warnings .
 
   build:
     needs: setup
@@ -66,7 +66,7 @@ jobs:
       - name: Run Tests
         run: |
           dart pub global activate coverage 1.2.0
-          dart test -j 1 -x pull-request-only --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
+          dart test --timeout 2x -j 1 -x pull-request-only --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
       - name: Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v3
