--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -1,18 +1,16 @@
 name: mason_cli
-description: |
+description: >
   Mason CLI allows developers to create and consume reusable templates called bricks.
-version: 0.1.0-dev.56
-homepage: 'https://github.com/felangel/mason'
-repository: 'https://github.com/felangel/mason'
-issue_tracker: 'https://github.com/felangel/mason/issues'
-documentation: 'https://docs.brickhub.dev'
-topics:
-- mason
-- cli
-- template
-- generator
+version: 0.1.0-dev.55
+homepage: https://github.com/felangel/mason
+repository: https://github.com/felangel/mason
+issue_tracker: https://github.com/felangel/mason/issues
+documentation: https://docs.brickhub.dev
+topics: [mason, cli, template, generator]
+
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ">=3.3.0 <4.0.0"
+
 dependencies:
   args: ^2.1.0
   checked_yaml: ^2.0.1
@@ -21,8 +19,9 @@ dependencies:
   mason_api: ^0.1.0-dev.10
   meta: ^1.7.0
   path: ^1.8.0
-  pub_updater: '>=0.3.0 <0.5.0'
+  pub_updater: ">=0.3.0 <0.5.0"
   watcher: ^1.1.0
+
 dev_dependencies:
   build_runner: ^2.0.0
   build_verify: ^3.0.0
@@ -30,5 +29,6 @@ dev_dependencies:
   collection: ^1.15.0
   mocktail: ^1.0.0
   test: ^1.17.0
+
 executables:
-  mason: null
+  mason:
