--- a/.github/workflows/mason_logger.yaml
+++ b/.github/workflows/mason_logger.yaml
@@ -49,6 +49,11 @@ jobs:
               echo "PASSED"
           else
               echo "FAILED"
+              echo "Expected"
+              cat test/fixtures/ci.txt
+              echo "---"
+              echo "Actual"
+              cat ci.txt
               exit 1
           fi
 
