--- a/.github/workflows/mason_logger.yaml
+++ b/.github/workflows/mason_logger.yaml
@@ -49,7 +49,7 @@ jobs:
               echo "PASSED"
           else
               echo "FAILED"
-              diff -u $expected $actual
+              diff -uw $expected $actual
               exit 1
           fi
 
