--- a/.github/workflows/mason_logger.yaml
+++ b/.github/workflows/mason_logger.yaml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ci.txt
-          path: ci.txt
+          path: ./ci.txt
 
       - name: Run Tests
         run: |
