--- a/.github/workflows/mason_logger.yaml
+++ b/.github/workflows/mason_logger.yaml
@@ -40,24 +40,6 @@ jobs:
       - name: Analyze
         run: dart analyze --fatal-infos --fatal-warnings .
 
-      - name: Verify CI Behavior
-        run: |
-          dart test/ci.dart >> ci.txt
-          actual="ci.txt"
-          expected="test/fixtures/ci.txt"
-          if diff -u --ignore-space-change --strip-trailing-cr --ignore-blank-lines "$actual" "$expected"; then
-              echo "PASSED"
-          else
-              echo "FAILED"
-              # exit 1
-          fi
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ci.txt
-          path: ./ci.txt
-
       - name: Run Tests
         run: |
           dart pub global activate coverage 1.2.0
@@ -67,6 +49,32 @@ jobs:
         uses: VeryGoodOpenSource/very_good_coverage@v3
         with:
           path: packages/mason_logger/coverage/lcov.info
+
+  e2e:
+    defaults:
+      run:
+        working-directory: packages/mason_logger
+
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v4.1.7
+      - uses: dart-lang/setup-dart@v1
+
+      - name: Install Dependencies
+        run: dart pub get
+
+      - name: Verify CI Behavior
+        run: |
+          dart test/ci.dart >> ci.txt
+          actual="ci.txt"
+          expected="test/fixtures/ci.txt"
+          if diff -u --ignore-space-change --strip-trailing-cr --ignore-blank-lines "$actual" "$expected"; then
+              echo "PASSED"
+          else
+              echo "FAILED"
+              exit 1
+          fi
 
   pana:
     defaults:
