--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -1,5 +1,7 @@
 $schema: https://raw.githubusercontent.com/streetsidesoftware/cspell/main/cspell.schema.json
 version: "0.2"
+ignorePaths:
+- "*_bundle.dart"
 words:
   - APPDATA
   - LOCALAPPDATA
