--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -10,26 +10,26 @@ topics: [mason, cli, template, generator]
 funding: [https://github.com/sponsors/felangel]
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.5.0 <4.0.0"
 
 dependencies:
-  args: ^2.1.0
-  checked_yaml: ^2.0.1
-  cli_completion: ^0.5.0
-  mason: ^0.1.0-dev.53
-  mason_api: ^0.1.0-dev.10
-  meta: ^1.7.0
-  path: ^1.8.0
-  pub_updater: ">=0.3.0 <0.5.0"
+  args: ^2.5.0
+  checked_yaml: ^2.0.3
+  cli_completion: ^0.5.1
+  mason: ^0.1.0-dev.58
+  mason_api: ^0.1.0-dev.12
+  meta: ^1.15.0
+  path: ^1.9.0
+  pub_updater: ^0.4.0
   watcher: ^1.1.0
 
 dev_dependencies:
-  build_runner: ^2.0.0
-  build_verify: ^3.0.0
-  build_version: ^2.0.0
-  collection: ^1.15.0
-  mocktail: ^1.0.0
-  test: ^1.17.0
+  build_runner: ^2.4.12
+  build_verify: ^3.1.0
+  build_version: ^2.1.1
+  collection: ^1.19.0
+  mocktail: ^1.0.4
+  test: ^1.25.8
 
 executables:
   mason:
