--- a/packages/mason_cli/test/fixtures/new/hooks/hooks/pubspec.yaml
+++ b/packages/mason_cli/test/fixtures/new/hooks/hooks/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hooks_hooks
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ^3.5.4
 
 dependencies:
-  mason: ">=0.1.0-dev.60 <0.1.0"
+  mason: ^0.1.0
