update brick environments

--- a/packages/mason_cli/test/bricks/array_no_choices/brick.yaml
+++ b/packages/mason_cli/test/bricks/array_no_choices/brick.yaml
@@ -4,7 +4,7 @@ description: A new brick created with the Mason CLI.
 version: 0.1.0+1
 
 environment:
-  mason: ">=0.1.0-dev <0.1.0"
+  mason: ^0.1.0
 
 vars:
   colors:
