--- a/bricks/hello/brick.yaml
+++ b/bricks/hello/brick.yaml
@@ -4,7 +4,7 @@ repository: https://github.com/felangel/mason/tree/master/bricks/hello
 version: 0.1.0+1
 
 environment:
-  mason: ">=0.1.0-dev <0.1.0"
+  mason: ^0.1.0
 
 vars:
   name:
