--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mason_cli
 description: >
   Mason CLI allows developers to create and consume reusable templates called bricks.
-version: 0.1.0-dev.57
+version: 0.1.0
 homepage: https://github.com/felangel/mason
 repository: https://github.com/felangel/mason
 issue_tracker: https://github.com/felangel/mason/issues
@@ -10,14 +10,14 @@ topics: [mason, cli, template, generator]
 funding: [https://github.com/sponsors/felangel]
 
 environment:
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ^3.5.4
 
 dependencies:
   args: ^2.5.0
   checked_yaml: ^2.0.3
   cli_completion: ^0.5.1
-  mason: ^0.1.0-dev.58
-  mason_api: ^0.1.0-dev.12
+  mason: ^0.1.0
+  mason_api: ^0.1.0
   meta: ^1.15.0
   path: ^1.9.0
   pub_updater: ^0.5.0
