--- a/.github/workflows/mason_logger.yaml
+++ b/.github/workflows/mason_logger.yaml
@@ -73,6 +73,7 @@ jobs:
               echo "PASSED"
           else
               echo "FAILED"
+              diff "$actual" "$expected"
               exit 1
           fi
 
