--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -90,4 +90,4 @@ jobs:
           dart pub global activate pana
 
       - name: Verify Pub Score
-        run: ../../tool/verify_pub_score.sh
+        run: ../../tool/verify_pub_score.sh 150
