--- a/packages/mason_cli/analysis_options.yaml
+++ b/packages/mason_cli/analysis_options.yaml
@@ -3,6 +3,7 @@ analyzer:
   exclude:
     - "test/.test_coverage.dart"
     - "test/fixtures/**"
+    - "test/bricks/**"
     - "**/*.g.dart"
     - "**/version.dart"
 linter:
